# sciimg

./: Cargo.toml  profiling.md
benches/: gaussian.rs  load_gpu.rs  shader.wgsl
src/: accelerator_utils.rs  blur.rs  decompanding.rs  enums.rs  gaussianblur.rs  gpu_image.rs  hotpixel.rs  image.rs  imagebuffer.rs  inpaint.rs  lib.rs  lowpass.rs  matrix.rs  rgbimage.rs  unsharp.rs
src/camera/: cahvor.rs  cahvore.rs
src/shaders/: hot_pixel_correction.wgsl
tests/: rgbimage.rs  util.rs
