[package]
name = "sciimg"
version = "0.5.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2021"
description = "Base support for planetary science image processing"
repository = "https://github.com/kmgill/sciimg"
readme = "README.md"
keywords = ["planetary", "astrophotography", "science", "imaging"]
license = "MIT"

[features]
rayon = ["dep:rayon"]
wgpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:flume", "log"]
default = ["wgpu", "rayon"]
log = ["dep:log", "dep:pretty_env_logger"]

[dependencies]
chrono = "0.4.19"
image = "0.24.5"
imageproc = "0.23.0"
lab = "0.11.0"
memmap = "0.7.0"
serde = { version = "1.0.125", features = ["derive"] }
string-builder = "0.2.0"
itertools = "0.10.5"
anyhow = "1.0.65"

# Optional Deps:
wgpu = { version = "24.0.1", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.22.0", optional = true }
rayon = { version = "1.7.0", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
log = { version = "0.4.26", optional = true }
flume = { version = "0.11.1", optional = true }
