[package]
name = "sciimg"
version = "0.5.0"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2021"
description = "Base support for planetary science image processing"
repository = "https://github.com/kmgill/sciimg"
readme = "README.md"
keywords = ["planetary", "astrophotography", "science", "imaging"]
license = "MIT"

[features]
rayon = ["dep:rayon"]
default = []

[dependencies]
chrono = "0.4.19"
image = "0.24.5"
imageproc = "0.23.0"
lab = "0.11.0"
memmap = "0.7.0"
rayon = { version = "1.7.0", optional = true }
serde = { version = "1.0.125", features = ["derive"] }
string-builder = "0.2.0"
itertools = "0.10.5"
anyhow = "1.0.65"


wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
# GPU DEPS:
#TODO: Trim these when something is WORKING.
thiserror = "2.0.12"
encase = { version = "0.10.0", features = ["glam", "mint"] }
glam = "0.29.0"

bytemuck = "1.22.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
mint = "0.5.9"
pollster = "0.4.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "gaussian"
harness = false
